--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=IM+Fell+Great+Primer+SC&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
 			rel="stylesheet"
 		/>
+		<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	</head>
 	<body>
 		<app-root></app-root>
